--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -38,7 +38,7 @@
         </div>
         <!-- End of Title and search -->
         <!-- Table of Employees -->
-        <table class="table text-center shadow-sm rounded-5">
+        <table class="table text-center shadow-sm rounded-5 table-responsive">
           <thead class="bg-body-tertiary">
             <tr>
               <th scope="col" class="text-primary">ID</th>
