--- a/src/app/components/show-one-employee/show-one-employee.component.html
+++ b/src/app/components/show-one-employee/show-one-employee.component.html
@@ -23,7 +23,7 @@
         <!-- Show one Employee -->
          <section class="container py-5 ">
                   <!-- Table of Employee  -->
-                  <table class="table text-center shadow-sm rounded-5">
+                  <table class="table text-center shadow-sm rounded-5 table-responsive">
                     <thead class="bg-body-tertiary">
                       <tr>
                         <th scope="col" class="text-primary">ID</th>
