--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
   </head>
-  <body class="bg-body-tertiary pb-4">
+  <body class="bg-body-tertiary pb-4 table-responsive-sm">
     <!-- Main Content -->
     <main>
       <section class="container">
@@ -38,7 +38,7 @@
         </div>
         <!-- End of Title and search -->
         <!-- Table of Employees -->
-        <table class="table text-center shadow-sm rounded-5 table-responsive">
+        <table class="table text-center shadow-sm rounded-5 table-responsive table-responsive-sm">
           <thead class="bg-body-tertiary">
             <tr>
               <th scope="col" class="text-primary">ID</th>
