--- a/src/app/components/show-one-employee/show-one-employee.component.html
+++ b/src/app/components/show-one-employee/show-one-employee.component.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body class="bg-body-tertiary">
+    <body class="bg-body-tertiary table-responsive-sm">
              <!-- Success Message -->
              <section id="message-container">
               <div class="position-fixed top-0 w-100 h-100  d-flex justify-content-center align-items-center text-center" id="message">
@@ -23,7 +23,7 @@
         <!-- Show one Employee -->
          <section class="container py-5 ">
                   <!-- Table of Employee  -->
-                  <table class="table text-center shadow-sm rounded-5 table-responsive">
+                  <table class="table text-center shadow-sm rounded-5 table-responsive table-responsive-sm">
                     <thead class="bg-body-tertiary">
                       <tr>
                         <th scope="col" class="text-primary">ID</th>
